# BlogWriter

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  elyra.toml
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: index.html  package-lock.json  package.json  vite.config.js
app/src/: App.svelte  app.css  bindings.ts  main.js  theme.js
docs/: README.md  architecture.md  auto-update.md  configuration.md  database.md  getting-started.md  images.md  laravel-endpoint.md  scheduling.md  troubleshooting.md
migrations/: 0001_init.down.sql  0001_init.sql  0002_images.down.sql  0002_images.sql  0003_site_description.down.sql  0003_site_description.sql  0004_article_category.down.sql  0004_article_category.sql
scripts/: build-linux.sh  build-macos.sh  make-update-manifest.sh
src/: ai.rs  db_tests.rs  handlers.rs  image.rs  main.rs  models.rs  publish.rs  schedule.rs  updater.rs
